--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,23 +1,13 @@
-# == Schema Information
-#
-# Table name: users
-#
-#  id              :integer          not null, primary key
-#  email           :string           not null
-#  password_digest :string           not null
-#  session_token   :string           not null
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
-#
-
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  name: MyString
+  emails: MyString
+  pic_url: MyString
+  password_digest: MyString
+
+two:
+  name: MyString
+  emails: MyString
+  pic_url: MyString
+  password_digest: MyString
