Update for Heroku deployment

--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "4.1.1",
+    "npm": "2.1.x"
+  },
+
+  "scripts": {
+    "postinstall": "./node_modules/.bin/webpack"
+    }
 }
