--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/.bin/webpack"
   },
   "keywords": [],
   "author": "",
@@ -29,9 +30,5 @@
   "engines": {
     "node": "4.1.1",
     "npm": "2.1.x"
-  },
-
-  "scripts": {
-    "postinstall": "./node_modules/.bin/webpack"
-    }
+  }
 }
