--- a/test/fixtures/taggings.yml
+++ b/test/fixtures/taggings.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: taggings
+#
+#  id         :integer          not null, primary key
+#  tag_id     :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  theme_id   :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
