--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "webpack": "^1.13.3"
   },
   "devDependencies": {
